# Vantage

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/calculator_agent/: calculator.yaml  run.py
examples/custom_tool_agent/: run.py  tools.py  word_agent.yaml
examples/multi_agent_flow/: agents.yaml  run.py
examples/stack_overflow_agent/: run.py  stack_overflow_agent.yaml  tools.py
examples/weather_agent/: run.py  weather_agent.yaml
scripts/: bootstrap.ps1  bootstrap.sh
src/vantage/: __init__.py  cli.py  config.py  runtime.py
src/vantage/core/: __init__.py  agent.py  bases.py  handovers.py  models.py
src/vantage/llms/: __init__.py  groq.py  openai.py
src/vantage/memory/: __init__.py  local.py
src/vantage/tools/: __init__.py  calculator.py  dictionary_tool.py  stack_overflow_tool.py  weather_tool.py  wikipedia_tool.py
src/vantage/utils/: __init__.py  viz.py
tests/: conftest.py  test_agent.py  test_async.py  test_config.py  test_handover.py  test_memory.py  test_yaml_and_llms.py
tests/tools/: test_stack_overflow_tool.py  test_weather_tool.py
